src/objects/Post_Sector_Ops_Rep_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legacy_Created_By__c</fullName>
        <label>Legacy Created By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Created_Date__c</fullName>
        <label>Legacy Created Date</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Updated_By__c</fullName>
        <label>Legacy Updated By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Updated_Date__c</fullName>
        <label>Legacy Updated Date</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Vendor_Ops__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User Specified</description>
        <label>New Vendor Ops</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Postal_Sector_Ven_Ops_Rep_Mappings1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Old_Vendor_Ops__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User Specified</description>
        <label>Old Vendor Ops</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Postal_Sector_Ven_Ops_Rep_Mappings2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Postal_Area_Description__c</fullName>
        <label>Postal Area Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Postal_Sector_Code__c</fullName>
        <label>Postal Sector Code</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Postal_Zone_Legacy_Id__c</fullName>
        <externalId>true</externalId>
        <label>Postal Zone Legacy Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Vendor_Ops__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User Specified</description>
        <label>Vendor Ops</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Postal_Sector_Ven_Ops_Rep_Mappings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Zone__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Zone</label>
        <referenceTo>Postal_Zone__c</referenceTo>
        <relationshipLabel>Post Sector Ops Rep Mappings</relationshipLabel>
        <relationshipName>Post_Sector_Ops_Rep_Mappings</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Post Sector Ops Rep Mapping</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Zone__c</columns>
        <columns>Postal_Sector_Code__c</columns>
        <columns>Vendor_Ops__c</columns>
        <columns>Postal_Zone_Legacy_Id__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PV-{00}</displayFormat>
        <label>Post Sector Ops Rep Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Post Sector Ops Rep Mappings</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>